# VkNuts

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
TestRun/: CMakeLists.txt
TestRun/source/: source.cpp
VkNutsBase/: CMakeLists.txt
VkNutsBase/source/private/Platform/: LibraryInit.cpp  LibraryInit.h
VkNutsBase/source/private/Platform/Vulkan/: IWindow.h  VulkanHelper.cpp  VulkanHelper.h  VulkanImage.cpp  VulkanImage.h
VkNutsBase/source/private/Platform/Vulkan/VkManagement/: CommandBuffer.cpp  CommandBuffer.h  FrameBuffer.cpp  FrameBuffer.h  RenderPass.cpp  RenderPass.h  SwapChain.cpp  SwapChain.h  VkSamplerManager.cpp  VkSamplerManager.h  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h
VkNutsBase/source/private/Utilities/STBImage/: STBImage.cpp
VkNutsBase/source/private/VkNuts/Core/Engine/: Engine.cpp
VkNutsBase/source/private/VkNuts/Core/Gui/: EditingLayer.cpp
VkNutsBase/source/private/VkNuts/Core/Layer/: GraphicsLayer.cpp  ImGuiLayer.cpp  LayerRegistry.cpp
VkNutsBase/source/private/VkNuts/Core/MemoryManagement/: Memory.cpp  NutsMemoryResource.cpp
VkNutsBase/source/private/VkNuts/Core/Window/: Window.cpp  Window.h  WindowCallbackRegistry.h  WindowCallbacks.cpp
VkNutsBase/source/private/VkNuts/Module/: Module.cpp  Module.h  ModuleRegistry.cpp  ModuleRegistry.h
VkNutsBase/source/private/VkNuts/VkRenderer/: Image.cpp  Image.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VkRenderer.cpp  VkRenderer.h
VkNutsBase/source/private/VkNuts/VkRenderer/Module/Image/: Image.cpp  Image.h  ImageRegistry.cpp  ImageRegistry.h
VkNutsBase/source/private/VkNuts/VkRenderer/Module/Shader/: Shader.cpp  Shader.h  ShaderRegistry.cpp  ShaderRegistry.h
VkNutsBase/source/private/VkNuts/VkRenderer/Module/Texture/: Texture.cpp  Texture.h  TextureRegistry.cpp  TextureRegistry.h
VkNutsBase/source/public/: NutsPCH.cpp  NutsPCH.h  VkNuts.h
VkNutsBase/source/public/Platform/: CompilerDefines.h  PlatformDefines.h
VkNutsBase/source/public/Platform/Generic/: FileOperations.h  IWindow.h  ImageLoadFormat.h  KeyCode.h  MouseCode.h
VkNutsBase/source/public/Platform/Vulkan/: VulkanFwd.h
VkNutsBase/source/public/Utilities/: ConstexprMap.hpp  Container.hpp  SingeltonCRTP.hpp  SingletonCRTP.hpp  TimeController.hpp  TypeAlias.h  Utilities.hpp
VkNutsBase/source/public/Utilities/ImGui/: ImGuiHelper.cpp  ImGuiHelper.h
VkNutsBase/source/public/Utilities/STBImage/: STBImage.h
VkNutsBase/source/public/VkNuts/Core/: CoreDefines.h
VkNutsBase/source/public/VkNuts/Core/Attachment/: Attachment.h  AttachmentAPI.h  AttachmentSharedLibraryAPI.h  SharedLibraryAttachment.h  VulkanAttachment.h
VkNutsBase/source/public/VkNuts/Core/Engine/: Engine.h
VkNutsBase/source/public/VkNuts/Core/Event/: EngineEvents.h  Event.h  EventCategory.hpp  EventType.hpp  IOEvents.h  WindowEvents.h
VkNutsBase/source/public/VkNuts/Core/Gui/: EditingLayer.h
VkNutsBase/source/public/VkNuts/Core/Layer/: ImGuiLayer.h  Layer.h  LayerRegistry.h
VkNutsBase/source/public/VkNuts/Core/MemoryManagement/: NutsMemoryResource.h
VkNutsBase/source/public/VkNuts/Core/Registry/: Registry.h
VkNutsBase/source/public/VkNuts/Core/Window/: Window.h  WindowCallbacks.h  WindowProperties.h
VkNutsWindowCallbacks/: CMakeLists.txt
VkNutsWindowCallbacks/source/: WindowCallbacks.cpp  WindowCallbacks.h
